# Kairo

./: .gitignore  CMakeLists.txt  README.md  set-env.bat
.github/workflows/: ci.yml
examples/: array.kr  array2.kr  array2.st  class.kr  class.st  const.st  do_while.kr  do_while.st  for.st  function_overloads.st  hello_world.st  helloworld.st  if_else.kr  if_else.st  include.kr  string.kr  string.st  trait.kr  while.kr  while.st
include/codegen/: codegenerator.hpp
include/lexer/: includemanager.hpp  lexer.hpp  token.hpp
include/parser/: ast.hpp  parser.hpp
include/semantic/: semanticanalyzer.hpp
include/values/: value.hpp
libs/: convert.kr  math.st  string.st
src/: main.cpp
src/codegen/: codegenerator.cpp
src/lexer/: includemanager.cpp  lexer.cpp
src/parser/: parser.cpp
src/semantic/: semanticanalyzer.cpp
